# LiteraFlow

./: .env.example  .env.test  .gitignore  Makefile  README.md  TASK.md  main.py  pyproject.toml
infra/: Dockerfile.dev  docker-compose.yml  entrypoint.sh
literaflow/: main.py
literaflow/api/: routes.py
literaflow/api/v1/: books.py
literaflow/core/: config.py  db.py  dto.py  logger.py
literaflow/models/: annotations.py  book.py
literaflow/services/: book.py  denied_list.py  exceptions.py
literaflow/utils/: __init__.py  app_running.py  denied_books_parser.py  files.py  http_statuses.py
media/: decline_list_example.xlsx
tests/: conftest.py  test_books.py
